Support of native Magento Swatches module
Add swatches in products list

--- a/view/frontend/layout/smile_custom_entity_entity_view_product_list.xml
+++ b/view/frontend/layout/smile_custom_entity_entity_view_product_list.xml
@@ -33,6 +33,11 @@
                 </action>
                 <block class="Magento\Framework\View\Element\RendererList" name="category.product.type.details.renderers" as="details.renderers">
                     <block class="Magento\Framework\View\Element\Template" name="category.product.type.details.renderers.default" as="default"/>
+                    <block class="Magento\Swatches\Block\Product\Renderer\Listing\Configurable" as="configurable" after="category.product.type.details.renderers.default" template="Magento_Swatches::product/listing/renderer.phtml">
+                        <arguments>
+                            <argument name="configurable_view_model" xsi:type="object">Magento\Swatches\ViewModel\Product\Renderer\Configurable</argument>
+                        </arguments>
+                    </block>
                 </block>
                 <block class="Magento\Catalog\Block\Product\ProductList\Item\Container" name="catalogsearch.product.addto" as="addto">
                     <block class="Magento\Catalog\Block\Product\ProductList\Item\AddTo\Compare"
