--- a/view/frontend/templates/entity/attribute/custom_entity/renderer.phtml
+++ b/view/frontend/templates/entity/attribute/custom_entity/renderer.phtml
@@ -17,7 +17,7 @@
 $customEntity = $block->getCustomEntity();
 ?>
 
-<a href="<?= $customEntity->getUrlPath(); ?>">
+<a href="<?= $this->getUrl($customEntity->getUrlPath()); ?>">
     <?php if ($customEntity->getImage()): ?>
     <img src="<?= $customEntity->getImageUrl('image') ?>" alt="<?= $customEntity->getName(); ?>" width="50" height="50" />
     <?php else : ?>
