--- a/view/frontend/templates/entity/attribute/custom_entity/renderer.phtml
+++ b/view/frontend/templates/entity/attribute/custom_entity/renderer.phtml
@@ -9,13 +9,13 @@
 $customEntity = $block->getCustomEntity();
 ?>
 
-<a href="<?= $escaper->escapeUrl($this->getUrl($customEntity->getUrlPath())); ?>">
+<a href="<?= $escaper->escapeUrl($block->getUrl($customEntity->getUrlPath())); ?>">
     <?php if ($customEntity->getImage()): ?>
     <img src="<?= $escaper->escapeUrl($customEntity->getImageUrl('image')) ?>"
          alt="<?= $customEntity->getName(); ?>"
          width="50"
          height="50" />
-    <?php else : ?>
-    <?= $customEntity->getName(); ?>
+    <?php else: ?>
+        <?= $customEntity->getName(); ?>
     <?php endif;?>
 </a>
